// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HearingTypeConversion Displays convert to Central text when converting from Central 1`] = `
<div>
  <section
    aria-describedby="modal_id-desc"
    aria-labelledby="modal_id-title"
    aria-modal="true"
    class="cf-modal active "
    id="modal_id"
    role="dialog"
  >
    <div
      class="cf-modal-body"
      id=""
    >
      <button
        class="cf-modal-close"
        id="Convert-Hearing-To-Central-button-id-close"
        type="button"
      >
        <span
          class="usa-sr-only"
        >
          Close
        </span>
        <svg
          class="cf-icon-close"
          height="55"
          viewBox="0 0 55 55"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            close
          </title>
          <g
            fill="#212121"
          >
            <path
              d="M52.6 46.9l-6 6c-.8.8-1.9 1.2-3 1.2s-2.2-.4-3-1.2l-13-13-13 13c-.8.8-1.9 1.2-3 1.2s-2.2-.4-3-1.2l-6-6c-.8-.8-1.2-1.9-1.2-3s.4-2.2 1.2-3l13-13-13-13c-.8-.8-1.2-1.9-1.2-3s.4-2.2 1.2-3l6-6c.8-.8 1.9-1.2 3-1.2s2.2.4 3 1.2l13 13 13-13c.8-.8 1.9-1.2 3-1.2s2.2.4 3 1.2l6 6c.8.8 1.2 1.9 1.2 3s-.4 2.2-1.2 3l-13 13 13 13c.8.8 1.2 1.9 1.2 3s-.4 2.2-1.2 3z"
            />
          </g>
        </svg>
      </button>
      <div
        style="display: flex;"
      >
        <div
          data-css-1gs0ko2=""
        >
          <h1
            id="modal_id-title"
          >
            Convert Hearing To Central
          </h1>
          <div
            data-css-o98ubo=""
          >
            <p>
              The hearing request will appear in the scheduling queue for the
              <strong>
                Central Office
              </strong>
              .
            </p>
          </div>
        </div>
      </div>
      <div
        class="cf-modal-divider"
      />
      <div
        class="cf-modal-controls"
      >
        <div>
          <span
            class="cf-push-right"
          >
            <span>
              <button
                class="cf-submit usa-button"
                type="button"
              >
                Convert Hearing to
                Central
              </button>
            </span>
          </span>
          <span
            class="cf-push-left"
          >
            <span>
              <button
                class="cf-submit cf-btn-link usa-button"
                type="button"
              >
                Cancel
              </button>
            </span>
          </span>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`HearingTypeConversion Displays convert to Video text when converting from Video 1`] = `
<div>
  <section
    aria-describedby="modal_id-desc"
    aria-labelledby="modal_id-title"
    aria-modal="true"
    class="cf-modal active "
    id="modal_id"
    role="dialog"
  >
    <div
      class="cf-modal-body"
      id=""
    >
      <button
        class="cf-modal-close"
        id="Convert-Hearing-To-Video-button-id-close"
        type="button"
      >
        <span
          class="usa-sr-only"
        >
          Close
        </span>
        <svg
          class="cf-icon-close"
          height="55"
          viewBox="0 0 55 55"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            close
          </title>
          <g
            fill="#212121"
          >
            <path
              d="M52.6 46.9l-6 6c-.8.8-1.9 1.2-3 1.2s-2.2-.4-3-1.2l-13-13-13 13c-.8.8-1.9 1.2-3 1.2s-2.2-.4-3-1.2l-6-6c-.8-.8-1.2-1.9-1.2-3s.4-2.2 1.2-3l13-13-13-13c-.8-.8-1.2-1.9-1.2-3s.4-2.2 1.2-3l6-6c.8-.8 1.9-1.2 3-1.2s2.2.4 3 1.2l13 13 13-13c.8-.8 1.9-1.2 3-1.2s2.2.4 3 1.2l6 6c.8.8 1.2 1.9 1.2 3s-.4 2.2-1.2 3l-13 13 13 13c.8.8 1.2 1.9 1.2 3s-.4 2.2-1.2 3z"
            />
          </g>
        </svg>
      </button>
      <div
        style="display: flex;"
      >
        <div
          data-css-1gs0ko2=""
        >
          <h1
            id="modal_id-title"
          >
            Convert Hearing To Video
          </h1>
          <div
            data-css-o98ubo=""
          >
            <p>
              The hearing request will appear in the scheduling queue for the appropriate regional office.
            </p>
          </div>
        </div>
      </div>
      <div
        class="cf-modal-divider"
      />
      <div
        class="cf-modal-controls"
      >
        <div>
          <span
            class="cf-push-right"
          >
            <span>
              <button
                class="cf-submit usa-button"
                type="button"
              >
                Convert Hearing to
                Video
              </button>
            </span>
          </span>
          <span
            class="cf-push-left"
          >
            <span>
              <button
                class="cf-submit cf-btn-link usa-button"
                type="button"
              >
                Cancel
              </button>
            </span>
          </span>
        </div>
      </div>
    </div>
  </section>
</div>
`;
